fixed css writings changed font size and alignment fixed submit button and "Enter" to work to make divs remove button started

--- a/style.css
+++ b/style.css
@@ -33,11 +33,12 @@ h3 {
 .books {
   background-color: rgb(57, 57, 51);
   color: white;
-  border: 10px groove rgb(212, 124, 0);
-  text-align: center;
+  border: 10px groove rgb(212, 124, 0);  
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 40vh;
+  padding: 0 5px;
 }
 
 .button-container {
